2005-07-21  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/ns_adp_chunked.test:
	* tests/http_chunked.test: Rename tests which handle both Tcl and
	ADP.  Add some more tests which highlight a few bugs.

	* tests/testserver/pages/ns_adp_chunked.tcl:
	* tests/testserver/pages/http_chunked.adp: Rename file.  Handle
	streaming and non-streaming situations, and actually write out the
	data in two goes.  Add a workaround for a bug in the ns_conn
	chunked switch: detect whether client is HTTP/1.1 and therefore
	handles chunked encoding.  This needs to disappear altogether.

	* tests/testserver/pages/ns_tcl_chunked.tcl: Incorporate code
	directly into test file using ns_register_proc.

2005-07-19  Stephen Deasey  <sdeasey@users.sf.net>

	* Makefile: Add gdbruntest target to run a naviserver command
	shell under gdb.

2005-07-11  Vlad Seryakov  <seryakov@users.sf.net>

	* NEWS: Updated latest features and changes

	* nsd/driver.c:
	* nsd/nsd.h: Added support for spooling large uploaded
	content into temporary file. Configuration oprion maxsize 
	controls when to use temp file or memory buffer.

	* include/ns.h:	 Added definition of Ns_ConnSend.

2005-07-12  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/proc.c:
	* nsd/server.c:
	* nsd/adprequest.c:
	* nsd/tclrequest.c: Fix the confusion around the default adp
	request handler and ns_register_adp and add the missing proc
	callback info.  ns_info requestprocs now gets things
	right. ns_register_adp will also now register the default adp
	request handler if you don't specify an optional file to map.

	* include/ns.h:
	* nsd/Makefile:
	* nsd/tclmisc.c:
	* nsd/tclobj.c:
	* nsd/tcltime.c: Consolidate Tcl time functions and object type
	into one place.

2005-07-11  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/nsmain.c:
	* nsd/queue.c:
	* nsd/tclcmds.c:
	* nsd/proc.c:
	* nsd/tclinit.c: Add generalised interp tracing mechanism which
	replaces Ns_TclInitInterps, Ns_TclRegisterDeferred