@@ -931,8 +931,8 @@ extern void NsStopDrivers(void);
 extern void NsPreBind(char *bindargs, char *bindfile);
 extern void NsClosePreBound(void);
 extern void NsInitServer(char *server, Ns_ServerInitProc *initProc);
-extern char *NsConfigRead(char *file);
-extern void NsConfigEval(char *config, int argc, char **argv, int optind);
+extern char *NsConfigRead(CONST char *file);
+extern void NsConfigEval(CONST char *config, int argc, char **argv, int optind);
 extern void NsConfUpdate(void);
 extern void NsEnableDNSCache(int timeout, int maxentries);
 extern void NsStopServers(Ns_Time *toPtr);
